# appium-pilot

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/appium_pilot/: __init__.py  __main__.py  cli.py  config.py  devices.py  output.py  proc.py  record.py  resolve.py  server.py  session.py  snapshot.py  visualdiff.py
src/appium_pilot/commands/: alert_cmd.py  app_cmd.py  capture_cmd.py  devices_cmd.py  doctor_cmd.py  expect_cmd.py  find_cmd.py  flow_cmd.py  gesture_cmd.py  get_cmd.py  open_cmd.py  session_cmd.py  skills_cmd.py  snapshot_cmd.py  tap_cmd.py  type_cmd.py  url_cmd.py  video_cmd.py  wait_cmd.py
src/appium_pilot/skilldata/: SKILL.md
src/appium_pilot/strategies/: __init__.py  android.py  base.py  ios.py
tests/: conftest.py
tests/e2e/: apps.py  conftest.py  test_actions_e2e.py  test_alert_e2e.py  test_expect_e2e.py  test_flow_e2e.py  test_gestures_e2e.py  test_inspection_e2e.py  test_install_remove_e2e.py  test_keys_orientation_e2e.py  test_lifecycle_e2e.py  test_url_e2e.py  test_video_e2e.py  test_waits_e2e.py
tests/fixtures/: android_duplicates.xml  android_legacy_nodes.xml  android_source.xml  ios_source.xml
tests/unit/: test_alerts.py  test_config.py  test_expect.py  test_find.py  test_flow.py  test_get.py  test_locators.py  test_open_helpers.py  test_output.py  test_parser.py  test_quoting.py  test_recording_options.py  test_session.py  test_skills.py  test_snapshot.py  test_tap.py  test_url.py  test_visualdiff.py
